# Quantauri

./: .pdm-python  Cargo.toml  README.md  deploy.sh  pyproject.toml  requirements.txt
src/: api.rs  ta.rs  trade.rs
