[package]
name = "quantauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
peroxide = { version = "0.37", features = ["parquet", "csv"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
stock-data = "0.1.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
